--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -21,6 +21,12 @@ footer
 .top-padding-med
   padding-top 10px
 
+.top-margin-xsmall
+  margin-top 2px
+
+.right-margin-med
+  margin-right 10x
+
 .margin-left-med
   margin-left 10px
 
