--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -1,4 +1,4 @@
-.navbar-right(ng-controller="mvNavBarLoginCtrl")
+.navbar-right.right-margin-med(ng-controller="mvNavBarLoginCtrl")
     ul.nav.navbar-nav(ng-show="identity.isAuthenticated()")
             li
                 a(href="/") Home
