--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,4 +1,4 @@
 .container
     .jumbotron
-        h1 Go Monkey
-        p Lean Mean Note Making Machine
+        h1 Note Maker
+        p The Lean, Mean Note Making Machine...
