--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,4 +1,5 @@
-.container
-    .jumbotron
-        h1 Note Maker
-        p The Lean, Mean Note Making Machine...
+.row
+	.container.col-xs-12
+		.jumbotron
+			h1 Note Maker
+			p The Lean, Mean Note Making Machine...
