--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -6,6 +6,8 @@ html
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/vendor/toastr/toastr.css")
         link(rel="stylesheet", href="/css/site.css")
+        //-B00tstrap, Enabling responsive features.
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         base(href="/")
     body(ng-app='app')
         include currentUser
