--- a/public/app/notes/note-list.jade
+++ b/public/app/notes/note-list.jade
@@ -1,24 +1,24 @@
 .container
 	h1 {{identity.currentUser.firstName}}'s Notes
-	form.form-horizontal.col-md-6(name="noteForm")
+	form.form-horizontal.col-md-6.col-lg-6(name="noteForm")
 		fieldset
 			legend New Note
 			.form-group
-				label.col-md-2.control-label(for="content") Content
-				.col-md-10
+				label.col-md-2.col-lg-2.control-label(for="content") Content
+				.col-md-10.col-lg10
 					textarea.form-control(name="content", type="text", placeholder="Content of note...", ng-model="content", required)
 			.form-group
-				label.col-md-2.control-label(for="category") Category
-				.col-md-10
+				label.col-md-2.col-lg-2.control-label(for="category") Category
+				.col-md-10.col-lg-10
 					input.form-control(name="category", type="text", placeholder="Category", ng-model="category", required)
 			.form-group
-				.col-md-10.col-md-offset-2
+				.col-md-10.col-lg-10.col-md-offset-2
 					.pull-right
 						button.btn.btn-primary(ng-click="createNote()", ng-disabled="noteForm.$invalid") Submit
 						| &nbsp;
 						a.btn.btn-default(ng-click="emptyInput()") Cancel
-	.col-md-6
-		.panel.panel-primary.note-box(ng-repeat="note in notes")
+	.col-md-6.col-lg-6
+		.panel.panel-primary.note-box(ng-repeat="note in notes | date")
 			button.btn.btn-danger.pull-right.top-margin-xsmall.right-margin-xsmall(ng-click="deleteNoteFromDb(note._id, note)") Delete
 			.panel-heading {{note.category}}
 			.panel-body
