--- a/public/app/notes/note-list.jade
+++ b/public/app/notes/note-list.jade
@@ -19,8 +19,9 @@
 						a.btn.btn-default(ng-click="emptyInput()") Cancel
 	.col-md-6.col-lg-6
 		.panel.panel-primary.note-box(ng-repeat="note in notes | date")
-			button.btn.btn-danger.pull-right.top-margin-xsmall.right-margin-xsmall(ng-click="deleteNoteFromDb(note._id, note)") Delete
-			.panel-heading {{note.category}}
+			button.btn.btn-danger.pull-right.top-margin-xsmall(ng-click="deleteNoteFromDb(note._id, note)") Delete
+			.panel-heading {{note.created | date : format : mediumDate}}
+
 			.panel-body
-				h3 {{note.content}}
-				h3 {{note.createdOn | date}}
+				h3.label.label-primary {{note.category}}
+				p {{note.content}}
