--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,18 +1,17 @@
 extends ../includes/layout
 
 block main-content
-    div.wrapper
         nav.navbar.navbar-inverse.navbar-static-top
             .container
-                h1.col-lg-6.col-md-6
+                h1
                     a.navbar-brand(href="/") NoteMaker
-                .col-lg-6.col-md-6.navbar-header
+                .navbar-header
                     button.navbar-toggle(type="button" data-toggle="collapse" data-target="#collapse")
                         span.sr-only Toggle Navigation
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                .col-lg-6.col-md-6.pull-right.collapse.navbar-collapse#collapse
+                .pull-right.collapse.navbar-collapse#collapse
                     div(ng-include="'/partials/account/navbar-login'")
         section.container
             div(class="page {{ pageClass }}" ng-view)
