--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -56,6 +56,13 @@ footer
   position absolute
   bottom 0
 
+/*main.jade mean image*/
+.mean-img
+  position relative
+  bottom 5px
+
+.jumbotron
+  min-height 200px
 
 //- ANIMATIONS
 
