--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,5 +1,8 @@
 .row
 	.container
-		.jumbotron
+		div.jumbotron
 			h1 Note Maker
-			p The Lean, Mean Note Making Machine...
+			div
+				p.pull-left The Lean,  
+				img.pull-left.mean-img(src="../mean.png" alt="mean stack logo" height="35")
+				p.pull-left  Note Making Machine...
