--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -86,21 +86,44 @@ footer
     to      { transform: translateX(-100%); }
 }
 
-//- RIGHT
-@-webkit-keyframes slideOutRight {
-    to      { transform: translateX( 100%); }
+//- FADE OUT
+@-webkit-keyframes fadeOut {
+    to         { opacity: 0;}
 }
-@-moz-keyframes slideOutRight {
-    to      { transform: translateX( 100%); }
+@-moz-keyframes fadeOut {
+    to         { opacity: 0;}
 }
-@-o-keyframes slideOutRight {
-    to      { transform: translateX( 100%); }
+@-o-keyframes fadeOut {
+    to         { opacity: 0;}
 }
-@-ms-keyframes slideOutRight {
-    to      { transform: translateX( 100%); }
+@-ms-keyframes fadeOut {
+    to         { opacity: 0;}
 }
-@keyframes slideOutRight {
-    to      { transform: translateX( 100%); }
+@keyframes fadeOut {
+    to         { opacity: 0;}
+}
+
+
+//- FADE IN
+@-webkit-keyframes fadeIn {
+    from       { opacity: 0;}
+    to         { opacity: 1;}
+}
+@-moz-keyframes fadeIn {
+    from       { opacity: 0;}
+    to         { opacity: 1;}
+}
+@-o-keyframes fadeIn {
+    from       { opacity: 0;}
+    to         { opacity: 1;}
+}
+@-ms-keyframes fadeIn {
+    from       { opacity: 0;}
+    to         { opacity: 1;}
+}
+@keyframes fadeIn {
+    from       { opacity: 0;}
+    to         { opacity: 1;}
 }
 
 //-entering animations 
@@ -148,7 +171,7 @@ footer
 }
 
 
-//- Ng Animation Directives*/
+//- Ng Animation
 .ng-enter
   z-index 8888
 .ng-leave
@@ -185,32 +208,32 @@ footer
 // Animated Notes
 
 .note-box.ng-enter
-  -webkit-animation slideInRight 1.5s both ease-out
-  -moz-animation slideInRight 1.5s both ease-out
-  -o-animation slideInRight 1.5s both ease-out
-  -ms-animation slideInRight 1.5s both ease-out
-  animation slideInRight 1.5s both ease-out
+  -webkit-animation fadeIn 1.5s both ease-out
+  -moz-animation fadeIn 1.5s both ease-out
+  -o-animation fadeIn 1.5s both ease-out
+  -ms-animation fadeIn 1.5s both ease-out
+  animation fadeIn 1.5s both ease-out
   
 .note-box.ng-enter-active
-  -webkit-animation slideInRight 1.5s both ease-out
-  -moz-animation slideInRight 1.5s both ease-out
-  -o-animation slideInRight 1.5s both ease-out
-  -ms-animation slideInRight 1.5s both ease-out
-  animation slideInRight 1.5s both ease-out
+  -webkit-animation fadeIn 1.5s both ease-out
+  -moz-animation fadeIn 1.5s both ease-out
+  -o-animation fadeIn 1.5s both ease-out
+  -ms-animation fadeIn 1.5s both ease-out
+  animation fadeIn 1.5s both ease-out
 
 .note-box.ng-leave
-  -webkit-animation slideOutRight 0.3s both ease-in
-  -moz-animation slideOutRight 0.3s both ease-in
-  -o-animation slideOutRight 0.3s both ease-in
-  -ms-animation slideOutRight 0.3s both ease-in
-  animation slideOutRight 0.3s both ease-in
+  -webkit-animation fadeOut 0.3s both ease-in
+  -moz-animation fadeOut 0.3s both ease-in
+  -o-animation fadeOut 0.3s both ease-in
+  -ms-animation fadeOut 0.3s both ease-in
+  animation fadeOut 0.3s both ease-in
 
 .note-box.ng-leave-active
-  -webkit-animation slideOutRight 0.3s both ease-in
-  -moz-animation slideOutRight 0.3s both ease-in
-  -o-animation slideOutRight 0.3s both ease-in
-  -ms-animation slideOutRight 0.3s both ease-in
-  animation slideOutRight 0.3s both ease-in
+  -webkit-animation fadeOut 0.3s both ease-in
+  -moz-animation fadeOut 0.3s both ease-in
+  -o-animation fadeOut 0.3s both ease-in
+  -ms-animation fadeOut 0.3s both ease-in
+  animation fadeOut 0.3s both ease-in
 
 .note-box.ng-move
   -webkit-animation slideUp 0.3s both ease-in
@@ -225,15 +248,3 @@ footer
   -o-animation slideUp 0.3s both ease-in
   -ms-animation slideUp 0.3s both ease-in
   animation slideUp 0.3s both ease-in 
-
-.red
-  background-color #ff0000
-
-.blue
-  background-color #0000ff
-
-.green
-  background-color #00ff00
-
-.yellow
-  background-color #00ffff
