--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -2,6 +2,7 @@ doctype
 html
     head
         title Go Monkey
+        link(href="/mean.png" rel="mean image")
         link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/vendor/toastr/toastr.css")
